--- a/Rails/views/articles/edit.html.erb
+++ b/Rails/views/articles/edit.html.erb
@@ -10,11 +10,9 @@
   <input type="hidden" name="_method" value="patch" autocomplete="off" /> <!-- Это скрытое поле добавлено Rails автоматически -->
   <!-- Данные будут отправляться методом POST, но Рэилс увидит скрытое поле  -->
 
-  <!-- url: article_path(@article), method: :patch  - это и все дополнительное это хэш -->
-
   <!-- В этой форме почемуто не нужно data: {turbo:false} ??  -->
 
-  <!-- автоматически подставляет в значения полей данные соотв столбцов из сущности(БД) присвоеннной в переменную тут @article(Делается по умолчанию если имя переменной == имени в фрм билдере ??) -->
+  <!-- автоматически подставляет в значения полей данные соотв столбцов из сущности(БД) присвоеннной в переменную тут @article(Делается по умолчанию если имя переменной == имени в форм билдере ??) -->
   <p>
     <%= f.label :title %>
     <%= f.text_field :title %>
