--- a/Rails/views/articles/index.html.erb
+++ b/Rails/views/articles/index.html.erb
@@ -45,11 +45,13 @@
   <!--                    User 1 - * Article. Возможность удалить и редактировать только автору -->
 
   <p><%= link_to "Show article", article_path(article) %></p>
+
   <!-- Скроем возможности редактирования и удаления от всех кроме автора статьи -->
-  <!-- Мой вариант изначальный с обращением к столбцам -->
+  <!-- 1. Мой вариант изначальный с обращением к столбцам -->
   <% if current_user.id == article.user_id %>
-  <!-- Но в примере такой и он тоже работает. Видимо тут user берет поле с user_id автоматически как было с comments только наоборот -->
+  <!-- 2. Вариант из примера - сравнивает сущности активного юзера и юзера к которому привязана статья  -->
   <% if current_user == article.user %> <!-- В примере это делали через написание хэлпера -->
+    <!-- article.user - видимо тут user берет поле с user_id автоматически, как было с comments только наоборот, и возвращает по нему сущность юзера -->
     <p><%= link_to "Edit article", edit_article_path(article) %></p>
     <p><%= button_to "Destroy", article_path(article), method: :delete, data: { confirm: 'Действительно удалить?'} %></p>
   <% end %>
