--- a/Rails/views/articles/index.html.erb
+++ b/Rails/views/articles/index.html.erb
@@ -41,6 +41,8 @@
       3. устанавливает свой обработчик, при котором при нажатии на ссылку вызывается сабмит формы. Запрос отправляется с помощью технологии ajax
   -->
 
+  <!-- В Rails 7 вместо data-method нужно использовать data-turbo-method="DELETE"   ?? -->
+
 
   <!--                    User 1 - * Article. Возможность удалить и редактировать только автору -->
 
