--- a/Rails/views/articles/show.html.erb
+++ b/Rails/views/articles/show.html.erb
@@ -8,8 +8,7 @@
 
 <!-- По умолчанию URL формы будет '/articles/id'(show), но нам нужен '/articles/:article_id/comments', можно поменять вручную, но так делать не рекомендуется -->
 <!-- Потому для настройки нужного URL нужно использовать такой синтаксис со связью сущностей  -->
-<%= form_for([@article, @comment]) do |f| %>
-<% end %>
+<%= form_for([@article, @comment]) do |f| %><% end %>
 <!-- но у нас нет переменной @comment в контроллере articles#show get '/articles/id' из которого и возвращается представление с формой -->
 
 <!-- Тк нет переменной @comment используем метод build -->
@@ -32,15 +31,16 @@
 
 <!--                                   Форма для комментариев 2 (Devise: username) -->
 
-<!-- 2-1. Мой мутный вариант, где изменяется форма вместо добавления параметра value в нужное поле -->
-<%= form_for([@article, @article.comments.new(:author => current_user.username)]) do |f| %>
-<!-- Вместо создания временной сущности комментария только с article_id создаем временную сущность с заполненным полем username(заполненные поля автоматически заполняются и в форме) методом new вместо build. Теперь поле author получает значение value с именем пользователя -->
+<% if user_signed_in? %>
+  <!-- Можно поместить сюда форму чтобы не было ошибки изза current_user.username -->
+<% else %>
+  <h4>Войдите или зарегестрируйтесь чтобы оставить комментарий</h4>
 <% end %>
 
-<!-- 2-2. Видимо более приличный вариант -->
+<!-- 1. Норм вариант -->
 <%= form_for([@article, @article.comments.build]) do |f| %>
   <p>
-    <%= current_user.username %> <!-- username тк лэйбл к скрытому полю нафиг не нужен -->
+    <%= current_user.username %> <!-- просто, username тк лэйбл к скрытому полю нафиг не нужен -->
     <%= f.hidden_field :author, value: current_user.username %>
     <!-- value: current_user.username - задаем значение поля с именем текущего пользователя -->
     <!-- hidden_field - для скрытого поля -->
@@ -53,6 +53,11 @@
   <p><%= f.submit %></p>
 <% end %>
 
+<!-- 2. Мой мутный вариант, где изменяется форма вместо добавления параметра value в нужное поле -->
+<%= form_for([@article, @article.comments.new(:author => current_user.username)]) do |f| %>
+<!-- Вместо создания временной сущности комментария только с article_id создаем временную сущность с заполненным полем username(заполненные поля автоматически заполняются и в форме) методом new вместо build. Теперь поле author получает значение value с именем пользователя -->
+<% end %>
+
 
 <!--                                           Вывод комментариев -->
 
@@ -60,13 +65,7 @@
 
 <!-- Комментарии тоже удобно выводить от связи @article.comments, не определяя в articles#show других переменных -->
 
-<!-- Пустой комментарий, созданный формой выше будет тоже содержаться в @article.comments, если вывод комментов будет располагаться ниже формы, потому если он ниже как тут, то нужно дописать костылей, например: -->
-<!--
-'Пока еще нет комментариев' if @article.comments.size == 1
-Тк по счету он последний то можно сделать например
-@article.comments[0..-2].each do |comment|
--->
-
+<!-- Пустой комментарий, созданный формой выше будет тоже содержаться в @article.comments (последним в массиве), если вывод комментов будет располагаться ниже формы, потому если он ниже как тут, то нужно дописать костылей. -->
 <%= 'Пока еще нет комментариев' if @article.comments.empty? %>
 
 <% @article.comments.each do |comment| %>
