--- a/Rails/views/contacts/new.html.erb
+++ b/Rails/views/contacts/new.html.erb
@@ -27,7 +27,8 @@
 	  <%= f.text_field :email %>
 	</p>
 	<p>
-	  <%= f.label :message %><br>
+	  <%= f.label :message, 'Message' %><br>
+		<!-- Поменять название лэйбла -->
 	  <%= f.text_area :message %>
 	</p>
 
