--- a/Rails/views/layouts/application.html.erb
+++ b/Rails/views/layouts/application.html.erb
@@ -63,6 +63,33 @@
 
 
 
+
+    <!--                            i18n меню для переключения языков(для шапки бутстрап) -->
+
+    <ul class="nav col-12 col-lg-auto mb-2 mb-md-0">
+      <li class="dropdown">
+        <%= link_to '#', class: 'nav-link px-2 dropdown-toggle', data: {"bs-toggle": 'dropdown'} do %>
+          <%= tag.div '', class: "flag #{I18n.locale}-flag mt-1" %>
+          <%= t I18n.locale %> <!-- Название текущей локали -->
+        <% end %>
+
+        <ul class="dropdown-menu"> <!-- собственно дропдаун с выбором локали -->
+          <% I18n.available_locales.each do |locale| %>
+            <li>
+              <% if I18n.locale == locale %> <!-- если текущая локаль(I18n.locale) равна локали из переменной -->
+                <%= tag.span t(locale), class: 'dropdown-item' %> <!-- отображаем название локали, тут t(locale) это перевод названия локали на нужный язык -->
+              <% else %> <!-- если текущая локаль не равна локали из переменной -->
+                <%= link_to t(locale), url_for(locale: locale), class: 'dropdown-item' %> <!-- ссылка переключения локали, добавляет локаль в URL ?? (можно было без дропдаун, списка и цикла по простому сделать лишь 2 ссылки переключения с url_for(locale: :ru) и url_for(locale: :en)) -->
+                <!-- В уроке было root_path(locale: locale) -->
+              <% end %>
+            </li>
+          <% end %>
+        </ul>
+      </li>
+    </ul>
+
+
+
     <%= yield %>
 
 
