--- a/Rails/views/layouts/application.html.erb
+++ b/Rails/views/layouts/application.html.erb
@@ -66,7 +66,7 @@
 
     <!--                            i18n меню для переключения языков(для шапки бутстрап) -->
 
-    <ul class="nav col-12 col-lg-auto mb-2 mb-md-0">
+    <ul class="nav mb-2 mb-md-0">
       <li class="dropdown">
         <%= link_to '#', class: 'nav-link px-2 dropdown-toggle', data: {"bs-toggle": 'dropdown'} do %>
           <%= tag.div '', class: "flag #{I18n.locale}-flag mt-1" %>
