--- a/Rails/views/articles/new.html.erb
+++ b/Rails/views/articles/new.html.erb
@@ -4,13 +4,13 @@
 
 <!-- Этот синтаксис Рэилс для формы не обязателен и можно просто писать HTML как в формах Синатры -->
 
-<%= form_for :article, url: '/articles', data: {turbo:false} do |f| %> <!-- Тут именно с %= -->
-  <!-- form_for - стандартный форм билдер, создает форму. Существуют разные форм билдеры(например для формы Бутсрапа), form_for используется не так часто, есть ещё форм билдер Simple form. Для этого подключается отдельный гем. -->
-  <!-- :article - в единственном числе, что логично тк форма отправляет данные об одной сущности. В итоге если посмотреть код то будет создана форма:
+<%= form_for :article, url: articles_path, data: {turbo:false} do |f| %> <!-- Тут именно с %= -->
+  <!-- form_for - стандартный форм билдер(хэлпер), создает форму. Существуют разные форм билдеры, например для формы Бутсрапа, есть ещё форм билдер Simple form итд, собственно form_for используется не так часто. -->
+  <!-- :article - параметр в единственном числе, тк форма отправляет данные об одной сущности. В итоге если посмотреть код то будет создана форма:
     <form action="/articles/new" accept-charset="UTF-8" method="post">
-      <input type="hidden" name="authenticity_token" value="DGyL-HHUE0zhY7jgWBY5d7ZK0YK8oNKBppIILnbIXqjMpuGinsvpiN-0DD78BX3siF5BJ6qYsRgsnOmkAZGbJQ" autocomplete="off" />
+      <input type="hidden" name="authenticity_token" value="DGyL-HHUE0zhYRgsnOmkAZGbJQ" autocomplete="off" />
   -->
-  <!-- url: '/articles' (url: articles_path - альтернатива, направняет на корневой URL контроллера те '/articles') - добавляем. Тк для URL "/articles/new", что у form_for :article по умолчанию, существует только GET-обработчик(new), потому при нажатии кнопки произойдет ошибка. Для POST используется экшен create c URL '/articles', соотв надо перенаправить форму на него. Теперь если посмотреть код то адрес в теге формы изменился:
+  <!-- url: articles_path - (так же можно захардкодить: url: '/articles') направняет на корневой URL контроллера те '/articles') - добавляем его. Тк для URL "/articles/new", что у form_for :article по умолчанию, существует только GET-обработчик(new), потому при нажатии кнопки произойдет ошибка. Для POST используется экшен create c URL '/articles', соотв надо перенаправить форму на него. Теперь если посмотреть код то адрес в теге формы изменился:
     <form action="/articles" accept-charset="UTF-8" method="post">
   -->
   <!-- data: {turbo:false} - нужно дописать, если в /articles/new при нажатии на кнопку submit не происходит перенаправления на /articles. Форма опять изменилась: -->
