--- a/Rails/views/articles/show.html.erb
+++ b/Rails/views/articles/show.html.erb
@@ -8,7 +8,9 @@
 
 <!-- По умолчанию URL формы будет '/articles/id'(show), но нам нужен '/articles/:article_id/comments', можно поменять вручную, но так делать не рекомендуется -->
 <!-- Потому для настройки нужного URL нужно использовать такой синтаксис со связью сущностей  -->
-<%= form_for([@article, @comment]) do |f| %><% end %>
+<%= form_for([@article, @comment]) do |f| %>
+  <!-- какието поля -->
+<% end %>
 <!-- но у нас нет переменной @comment в контроллере articles#show get '/articles/id' из которого и возвращается представление с формой -->
 
 <!-- Тк нет переменной @comment используем метод build -->
