--- a/Rails/views/contacts/new.html.erb
+++ b/Rails/views/contacts/new.html.erb
@@ -23,12 +23,12 @@
 	<% end %>
 
 	<p>
-	  <%= f.label :email %><br>
+	  <%= f.label :email %>
 	  <%= f.text_field :email %>
 	</p>
+	
 	<p>
-	  <%= f.label :message, 'Message' %><br>
-		<!-- Поменять название лэйбла -->
+	  <%= f.label :message, 'Message' %> <!-- Поменять название лэйбла -->
 	  <%= f.text_area :message %>
 	</p>
 
