ref sinatra 1half

--- a/web/views/a_index.erb
+++ b/web/views/a_index.erb
@@ -1,14 +1,16 @@
-<h1>Hi</h1>
+<h1>Hello</h1>
 
-<p>You typed: <%= @login %></p> <!-- Специальный синтаксис .erb размещающий значение переменной @login в html коде. В этих специальных кавычках мы можем писать любой рубикод. Это чемто похоже на интерполяцию -->
+<p>You typed: <%= @login %></p> <!-- Специальный синтаксис .erb размещающий любой рубикод(тут значение переменной @login) в html коде, при помощи этих специальных кавычк. Чемто похоже на интерполяцию -->
 <p>Your password: <%= @password %></p>
 <p><%= @denied %></p>
 
-<form action="/" method="POST"> <!-- Форма для метода post на странице по адресу '/' через нее отправляем данные на наш сервер -->
-  <!-- action="/"  - говорит куда(в какой обработчик) будут отправляться данные -->
+<!-- Форма для метода post на странице по адресу '/' через нее отправляем данные на наш сервер -->
+<form action="/" method="POST">
+  <!-- action="/"  - задает обработчик определенного URL, в который будут отправляться данные из формы -->
+  <!-- method="POST"  - задает метод при помощи которого будут отправлены данные из формы  -->
 
-  <input type="text" name="aaa"> <!-- Данные введенные в это поле обозначаются значением атрибута name -->
+  <input type="text" name="aaa"> <!-- Данные введенные в поле обозначаются значением "aaa" атрибута name и помещаются в метод params в виде :name => 'введенный пользователем текст' -->
   <input type="password" name="bbb">
-  <input type="submit"> <!-- активизирует пост запрос и отправляет данные и соответсвенно post обработчик с адресом фомы его обрабатывает -->
+  <input type="submit"> <!-- активизирует пост запрос и отправляет данные в обработчик с методом(тут post ) и с URL-адресом, заданными в теге формы -->
 
 </form>
