--- a/web/views/barbershop_result.erb
+++ b/web/views/barbershop_result.erb
@@ -1,4 +1,4 @@
-<h2>RESULT-A:</h2>
+<h2>RESULT:</h2>
 
 <% @file.each_line do |line| %> <!-- Можно применять к переменной любой рубикод -->
   <%= line %>  <!-- это отображается на странице -->
