--- a/web/views/leprosorium_index.erb
+++ b/web/views/leprosorium_index.erb
@@ -3,15 +3,13 @@
 
 <!-- Данные из каждого поста -->
 <% @results.each do |row| %>
-	<p>
-		<h4>Post №<%= row['id'] %></h4> <!-- Выводим номер поста -->
-		<%= row['content'] %> <!-- Выводим сам пост -->
-		<br><br>
-		Added by <b><%= row['author'] %></b> at <%= row['created_date'] %> <!-- Выводим автора и дату поста -->
-		<br><br>
+	<h4>Post №<%= row['id'] %></h4> <!-- Выводим номер поста -->
+	<%= row['content'] %> <!-- Выводим сам пост -->
+	<br><br>
+	Added by <b><%= row['author'] %></b> at <%= row['created_date'] %> <!-- Выводим автора и дату поста -->
+	<br><br>
 
-		<!--                 Создаем ссылку и соотв адрес страницы для универсального обработчика -->
-		<a href="/details/<%= row['id'] %>">Comments</a> <!-- id поста для адреса берем из id поста в БД и помещаем в URL адрес ссылки, теперь ее сможет обрабытывать метод get '/details/:post_id' где значение :post_id будет равно значению id которое мы присвоили из запроса БД -->
-	</p>
+	<!--                 Создаем ссылку и соотв URL адрес страницы для универсального обработчика -->
+	<a href="/details/<%= row['id'] %>">Comments</a> <!-- id поста для адреса берем из id поста в БД и помещаем в URL адрес ссылки, теперь ее сможет обрабытывать метод get '/details/:post_id' где значение :post_id будет равно значению id которое мы присвоили из запроса БД -->
 	<hr>
 <% end %>
