--- a/web/Sinatra/views/hq_barbershop_index.erb
+++ b/web/Sinatra/views/hq_barbershop_index.erb
@@ -5,7 +5,10 @@
     <!-- 1. Просто список -->
     <li><%= barber.name %></li> <!-- тк barber это объект-сущность в которой хранятся данные о строке таблицы barbers, которую мы задали в фаиле миграции то можем обращаться через метод(название колонки) который мы задавали(t.text :name) -->
 
-    <!-- 2. В виде ссылок ведущих на страницы парикмахеров(к теме Универсальные обработчики для однотипных страниц) -->
+    <!-- 2. В виде ссылок ведущих на страницы парикмахеров(для универсальных обработчиков для однотипных страниц) -->
     <li><a href="/barber/<%= barber.id %>"><%= barber.name %></a></li>
+
+    <!-- 3. Нативный вариант тоже работеат (??) -->
+    <li><%= barber['name'] %></li>
   <% end %>
 </ul>
