--- a/web/Sinatra/views/pizzashop_index.erb
+++ b/web/Sinatra/views/pizzashop_index.erb
@@ -27,11 +27,12 @@
 		<input type="hidden" name="orders" id="orders_input"> <!-- id="orders_input" - по этому селектору мы будем обращаться к полю через jquery, которое вставит в значение поля 'product_1=5,product_2=4,product_3=6,' -->
 
 		<!-- Кнопка отправки -->
-		<input type="submit" id="orders_button"> <!-- id="orders_button" - тк поле выше скрыто то добавим информацию о заказе в имя кнопки тем же способом что и выше -->
+		<input type="submit" id="orders_button"> <!-- id="orders_button" - добавим информацию о заказе в название кнопки -->
 	</form>
 
 </div>
 
+<!-- Запуск функций обновления значений в фрме после добавления заказов -->
 <!-- Нужно если форма выше находится в layout, соотв и скрипт переносим в layout, чтобы работало на всех страницах -->
 <!-- Чтобы при обновлении страницы данные 'product_1=5,product_2=4,product_3=6,' в поле <input type="text" name="orders" id="orders_input"> и колличество товаров в имени кнопки тоже обновлялись и вставлялись в значения поля/кнопки  -->
 <script>
