recons half rails1

--- a/web/Rails/views/articles/new.html.erb
+++ b/web/Rails/views/articles/new.html.erb
@@ -26,7 +26,7 @@
 
   <p>
     <%= f.label :title %><br> <!-- <label for="article_title">Title</label> -->
-      <!-- label - обозначение тега -->
+      <!-- label - название/обозначение тега -->
       <!-- title - название столбца в таблице -->
     <%= f.text_field :title %> <!-- <input type="text" name="article[title]" id="article_title" /> -->
   </p>
