--- a/web/Rails/views/contacts/new.html.erb
+++ b/web/Rails/views/contacts/new.html.erb
@@ -26,9 +26,9 @@
 	  <%= f.label :email %>
 	  <%= f.text_field :email %>
 	</p>
-	
+
 	<p>
-	  <%= f.label :message, 'Message' %> <!-- Поменять название лэйбла -->
+	  <%= f.label :message, 'Message' %> <!-- Поменять текст лэйбла -->
 	  <%= f.text_area :message %>
 	</p>
 
