--- a/web/Rails/views/articles/index.html.erb
+++ b/web/Rails/views/articles/index.html.erb
@@ -6,7 +6,8 @@
   <p><%= article.text %></p>
 
   <!-- Можно писать и как в Синатре, но тогда получится хардкод: -->
-  <a href="/articles/<%= article.id %>">Show article</a> | <a href="/articles/<%= article.id %>/edit">Edit article</a>
+  <a href="/articles/<%= article.id %>">Show article</a>
+  <a href="/articles/<%= article.id %>/edit">Edit article</a>
 
   <!-- https://guides.rubyonrails.org/routing.html#path-and-url-helpers  - _path методы -->
 
