--- a/web/Rails/views/articles/edit.html.erb
+++ b/web/Rails/views/articles/edit.html.erb
@@ -5,8 +5,8 @@
 <%= form_for :article, url: article_path(@article), method: :patch do |f| %>
   <!-- article_path(@article) - при помощи сущности из переменной @article перенаправляет форму на URL /articles/id(в POST метод update), по умолчанию форма отправляласть на /articles те в метод(POST) create -->
 
-  <!-- method: :patch (альтер method: :put) - создает скрытое текстовое поле, чтобы Рэилс понял что это метод PUT/PATCH -->
-  <!-- Браузер может отправлять только через GET или POST, других методов(PUT/DELETE) для него не существует. Но это можно обойти(workaround), создав скрытое поле которое добавит метод PUT/PATCH или DELETE -->
+  <!-- method: :patch или method: :put - создает скрытое текстовое поле, чтобы Рэилс понял что это метод PUT/PATCH -->
+  <!-- Браузер может отправлять только через GET или POST, других методов для него не существует. Но это можно обойти(workaround), создав скрытое поле которое добавит метод PUT, PATCH или DELETE -->
   <input type="hidden" name="_method" value="patch" autocomplete="off" /> <!-- Это скрытое поле добавлено Rails автоматически -->
   <!-- Данные будут отправляться методом POST, но Рэилс увидит скрытое поле  -->
 
