--- a/web/Rails/views/articles/show.html.erb
+++ b/web/Rails/views/articles/show.html.erb
@@ -34,7 +34,7 @@
 <!--                                   Форма для комментариев 2 (Devise: username) -->
 
 <% if user_signed_in? %>
-  <!-- Можно поместить сюда форму чтобы не было ошибки изза current_user.username -->
+  <!-- Можно поместить сюда форму чтобы не было ошибки изза current_user.username для незарегистированного пользователя -->
 <% else %>
   <h4>Войдите или зарегестрируйтесь чтобы оставить комментарий</h4>
 <% end %>
