--- a/web/Rails/app/views/layouts/application.html.erb
+++ b/web/Rails/app/views/layouts/application.html.erb
@@ -87,6 +87,12 @@
     <%= yield %>
 
 
+    <!-- Футер со вставкой года от сегодняшней даты(Руби) -->
+    <footer>
+      &copy; Kroker <%= Time.now.year %>
+    </footer>
+
+
   </body>
 </html>
 
