--- a/web/Rails/app/views/articles/index.html.erb
+++ b/web/Rails/app/views/articles/index.html.erb
@@ -14,7 +14,7 @@
   <!--                   Ссылки на просмотр и редактирование статьи при помощи синтаксиса Rails -->
   <p><%= link_to "Show article", article_path(article) %></p>
   <!-- <a href="/articles/2">Show article</a> -->
-  <!-- article_path(article) - параметром в метод передается сущность article, в итоге перейдет на /articles/id -->
+  <!-- article_path(article) - параметром в метод(именованный маршрут) передается сущность article, в итоге перейдет на /articles/id -->
   <p><%= link_to "Edit article", edit_article_path(article) %></p>
   <!-- <a href="/articles/2/edit">Edit article</a> -->
   <!-- edit_article_path(article) - в итоге перейдет на /articles/id/edit -->
