--- a/web/Rails/app/views/articles/index.html.erb
+++ b/web/Rails/app/views/articles/index.html.erb
@@ -12,18 +12,22 @@
   <!-- https://guides.rubyonrails.org/routing.html#path-and-url-helpers  - _path методы -->
 
   <!--                   Ссылки на просмотр и редактирование статьи при помощи синтаксиса Rails -->
-  <p><%= link_to "Show article", article_path(article) %></p>
+  <%= link_to "Show article", article_path(article) %>
   <!-- <a href="/articles/2">Show article</a> -->
   <!-- article_path(article) - параметром в метод(именованный маршрут) передается сущность article(объект статьи - экземпляр модели Article), для того чтобы id статьи подставить в :id URLа запроса, в итоге перейдет на /articles/id -->
   <!-- article_path(article.id) - при желании можно писать и так но это лишнее, тк хэлпер вызовет метод .id автоматически -->
-  <p><%= link_to "Edit article", edit_article_path(article) %></p>
+  <%= link_to "Edit article", edit_article_path(article) %>
   <!-- <a href="/articles/2/edit">Edit article</a> -->
   <!-- edit_article_path(article) - в итоге перейдет на /articles/id/edit -->
 
   <!--                  Ссылка/кнопка на удаление статьи -->
-  <p><%= button_to "Destroy", article_path(article), method: :delete, data: { confirm: 'Действительно удалить?'} %></p>
-  <!-- ?? data: { turbo_method: "post" } ?? для link_to -->
+  <%= button_to "Destroy", article_path(article), method: :delete, data: { confirm: 'Действительно удалить?'} %>
+  <!-- ?? data: { turbo_method: "post" } ?? для link_to с включенным хотваир -->
   <!-- button_to - для кнопки удаления вместо ссылки удаления link_to, тк на Rails версии 7+ вероятен баг - не удаляется статья (из браузера). Это происходит из-за того, что в Rails 7 отключен UJS. -->
+
+  <!-- В Рэилс 6 была такая например ссылка для удаления, в 7й для такого необходимо подключить UJS -->
+  <%= link_to 'Destroy', question_path(question), data: {method: :delete, confirm: 'Are you sure?'} %>
+
     <!-- Ссылка выглядит так(не добавляет форму): -->
       <a data-confirm="Действительно удалить?" rel="nofollow" data-method="delete" href="/articles/1">Destroy article</a>
     <!-- Кнопка выглядит так(добавляет форму): -->
@@ -32,7 +36,8 @@
         <button data-confirm="Действительно удалить?" type="submit">Destroy article</button>
         <input type="hidden" name="authenticity_token" value="Y0qY_ENmVXJ7z4K_OYyKaiOg3gx8jhUYz2I_KbncWglxBV2UvuNZBx5WpukCF8JYVWwtOUkUvsnm8QdzGPLRsg" autocomplete="off" />
       </form>
-  <!-- data: { confirm: 'Действительно удалить?'} - необязательный элемент c окном подтверждения(!!! почему-то не работает) -->
+
+  <!-- data: { confirm: 'Действительно удалить?'} - необязательный элемент c окном подтверждения(!!! почему-то не работает требует турбо изза хотвайр ??) -->
 
   <!-- data-method="delete" - кастомный атрибут Рэилс
     data-some_name атрибуты нужны для того чтобы мы могли создать собственные атрибуты(some_name - на выбор). html-валидатор будет знать что это кастомный атрибут, браузер их не обрабатыает
